data/derived/sp14/progs/unify/prog2709.ml.out
Characters 508-520:
  |MyExpr2 (e) -> "halve("^exprToString^")";;
                           ^^^^^^^^^^^^
Error: This expression has type expr -> string
       but an expression was expected of type string
